--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="assets/img/logo-g-favicon">
     <title>Progetto JavaScript-Basics Giovannetti Giacomo</title>
+    <script src="assets/js/index.js"></script>
 </head>
 <body>
     
