--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/logo-g-favicon.svg">
+    <link rel="stylesheet" href="./assets/css/style.css" >
     <title>Progetto JavaScript-Basics Giovannetti Giacomo</title>
     <script src="./assets/js/index.js" defer></script>
 </head>
