--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" >
     <title>Progetto JavaScript-Basics Giovannetti Giacomo</title>
     <script src="./assets/js/index.js" defer></script>
+    <script src="./assets/js/buttons.js" defer></script>
 </head>
 <body>
     
