creato script js per experience e function level up
lo script experience allarga e restinge la barra dell'exp mentre le functions lvl up aumentano il counter lvl quando la barra exp supera cento e lo diminuisco quando la barra exp arriva a 0

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Progetto JavaScript-Basics Giovannetti Giacomo</title>
     <script src="./assets/js/index.js" defer></script>
     <script src="./assets/js/buttons.js" defer></script>
+    <script src="./assets/js/experience.js" defer></script>
+    <script src="./assets/js/level-up.js" defer></script>
 </head>
 <body>
     
